--- a/6.latihan2 - suwit/css/style.css
+++ b/6.latihan2 - suwit/css/style.css
@@ -121,7 +121,7 @@ body {
 }
 
 
-.footer{
+footer{
 	opacity: 0;
 }
 
@@ -135,19 +135,17 @@ body {
 		z-index: 99;
 	}
 
-	.footer{
+	footer{
 	    background-color: #fff;
-	    width: 340px;
-	    height: 40px;
-	    line-height: 40px;
 	    color: #333;
 	    position: relative;
-	    margin-top: -40px;
-	    margin-left: 0;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
 	    opacity: 1;
 	}
 
-	.footer a{
+	footer a{
 		text-decoration: none;
 	}
 }
