--- a/6.latihan2 - suwit/css/style.css
+++ b/6.latihan2 - suwit/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+	height: 100%;
+}
+
 body {
 	font-family: sans-serif;
 	background: url(../img/background/7.webp);
@@ -141,7 +145,6 @@ footer{
 	    position: relative;
 	    bottom: 0;
 	    left: 0;
-	    right: 0;
 	    opacity: 1;
 	}
 
